5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1664_2968.log
== TEST (2019-04-16 11:17:35) 
-- CODE:
n1 = input("L ou S: ")
ql = int(input("quantidade de lanches ou salgados: "))
qr = int(input("quantidade de refrigerantes: "))
l = 5
s = 3.50
r = 4
if(n1 = "L"):
	pf = ql * 5 + qr * 4
	print(pf)
else:
	pf = ql * 3.50 + qr * 4
	print(pf)
-- ERROR:
File "XXXX", line 7
    if(n1 = "L"):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:17:42) 
-- CODE:
n1 = input("L ou S: ")
ql = int(input("quantidade de lanches ou salgados: "))
qr = int(input("quantidade de refrigerantes: "))
l = 5
s = 3.50
r = 4
if(n1 == "L"):
	pf = ql * 5 + qr * 4
	print(pf)
else:
	pf = ql * 3.50 + qr * 4
	print(pf)
-- OUTPUT:
11.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:18:22) 
-- CODE:
n1 = input("L ou S: ")
ql = int(input("quantidade de lanches ou salgados: "))
qr = int(input("quantidade de refrigerantes: "))
l = 5
s = 3.50
r = 4
if(n1 == "L"):
	pf = ql * 5 + qr * 4
	print(round(pf, 2))
else:
	pf = ql * 3.50 + qr * 4
	print(round(pf, 2))
-- OUTPUT:
11.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:19:05) 
-- CODE:
n1 = input("L ou S: ")
ql = float(input("quantidade de lanches ou salgados: "))
qr = float(input("quantidade de refrigerantes: "))
l = 5
s = 3.50
r = 4
if(n1 == "L"):
	pf = ql * 5 + qr * 4
	print(round(pf, 2))
else:
	pf = ql * 3.50 + qr * 4
	print(round(pf, 2))
-- OUTPUT:
11.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:19:18) 
-- CODE:
n1 = input("L ou S: ")
ql = float(input("quantidade de lanches ou salgados: "))
qr = float(input("quantidade de refrigerantes: "))
l = 5
s = 3.50
r = 4
if(n1 == "L"):
	pf = ql * 5 + qr * 4
	print(round(pf, 2))
else:
	pf = ql * 3.50 + qr * 4
	print(round(pf, 2))
-- EXECUTION TIME:
0.146936
-- TEST CASE 1:
---- input:
S
1
2
---- correct output:
11.5
---- user output:
11.5
-- TEST CASE 2:
---- input:
L
6
7
---- correct output:
58.0
---- user output:
58.0
-- TEST CASE 3:
---- input:
S
2
2
---- correct output:
15.0
---- user output:
15.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
